# VectoriumPy

./: README.md
VectoriumPy/: LICENSE  pyproject.toml
VectoriumPy/src/VectoriumPy/: __init__.py
VectoriumPy/src/VectoriumPy/Electricity/: circuit.py  electric_fields.py  electricity.py
VectoriumPy/src/VectoriumPy/Energy/: __init__.py  energy.py
VectoriumPy/src/VectoriumPy/Force/: Force.py  __init__.py
VectoriumPy/src/VectoriumPy/Kinematics/: __init__.py  motion.py
VectoriumPy/src/VectoriumPy/Tests/: test_electricity.py  test_energy.py  test_forces.py  test_kinematics.py  test_thermodynamics.py  test_waves.py
VectoriumPy/src/VectoriumPy/Thermodynamics/: Thermodynamics.py  __init__.py
VectoriumPy/src/VectoriumPy/Waves/: __init__.py  light.py  sound.py
VectoriumPy/src/VectoriumPy/examples/: examples.py
VectoriumPy/src/vectoriumPy/: __init__.py
VectoriumPy/src/vectoriumPy/Electricity/: __init__.py  circuit.py  electricity.py
VectoriumPy/src/vectoriumPy/Energy/: energy.py
VectoriumPy/src/vectoriumPy/Force/: Force.py  __init__.py  gravitation.py
VectoriumPy/src/vectoriumPy/Kinematics/: motion.py  projectile_motion.py
VectoriumPy/src/vectoriumPy/Magnetism/: __init__.py
VectoriumPy/src/vectoriumPy/Optics/: __init__.py  optics.py
VectoriumPy/src/vectoriumPy/Tests/: test_electricity.py  test_energy.py  test_forces.py  test_kinematics.py  test_magnetism.py  test_optics.py  test_thermodynamics.py  test_waves.py
VectoriumPy/src/vectoriumPy/Thermodynamics/: Thermodynamics.py
VectoriumPy/src/vectoriumPy/Vectors/: vectors.py
(+4 files in other folders)
